<resources>
    <string name="app_name">Curveball Launcher</string>
    <string name="action_settings">Settings</string>
    <string name="hideApps">Hide apps</string>
    <string name="settingsName">Settings</string>
    <string name="helpName">Help</string>
    <string name="delete">Delete</string>
    <string name="change_icon">Change Icon</string>
    <string name="add_widget">Add Widget</string>
    <string name="widget_sample_name">Widget Name</string>
    <string name="sample">Sample Text</string>
    <string name="change_wallpaper">Change wallpaper</string>
    <string name="add_to_dock">To Dock</string>
    <string name="uninstall">Uninstall</string>
    <string name="new_row">New Row</string>
    <string name="search_hint">Search apps</string>
    <string name="remove_row">Remove Row</string>
    <string name="resize_widget">Resize Widget</string>
    <string name="remove_widget">Remove Widget</string>
    <string name="default_widget_name">Widget Name</string>
    <string name="title_activity_icon_chooser">Choose An Icon</string>
    <string name="drop_icon_hint">Drop here!</string>
    <string name="edit_widget">Edit Widget</string>
    <string name="app_defaults">Default apps</string>
    <string name="default_clock_app">Clock shortcut</string>
    <string name="default_clock_summary">App to launch when clicking the clock.</string>
    <string name="default_calendar_app">Calendar shortcut</string>
    <string name="default_calendar_summary">App to launch when clicking the calendar.</string>
    <string name="default_search_app">Search shortcut</string>
    <string name="default_search_summary">App to launch when swiping right on the homescreen…</string>
    <string name="widgets">Widgets</string>
    <string name="resize_all_widgets">Resize All Widgets</string>
    <string name="resize_all_widgets_summary">Resize any widget if desired, regardless of widget\'s capability to support resizing. May produced undesirable effects on certain widgets.</string>
    <string name="widget_no_longer_installed">Widget is no longer installed.</string>
    <string name="edit_rows">Edit Rows</string>
    <string name="cancel">Cancel</string>
    <string name="no_rows">No rows to be edited. Add one by long-pressing an icon in the app drawer.</string>
    <string name="cant_remove_last">Can\'t remove last item in the list.</string>
    <string name="remove_dock_item">Remove dock item</string>
    <string name="remove_dock_item_message">Would you like to remove %s from the dock?</string>
    <string name="yes">Yes</string>
    <string name="app_info">App Info</string>
    <string name="name_your_folder">Name your folder</string>
    <string name="reorder_rows">Reorder rows</string>
    <string name="sample_text">Some sample text</string>
    <string name="no_snacklets_found">No snacklets found.</string>
    <string name="advanced">Advanced</string>
    <string name="debug_modules">Debug Snacklets</string>
    <string name="debug_modules_summary">Debug snacklets by viewing on-screen errors when invalid module data is sent.</string>
    <string name="module_error">Error in module</string>
    <string name="invalid_launch_specified">Invalid data specified to launch.</string>
    <string name="open_snacklet">Open Snacklet</string>
    <string name="replace_widget_with_clock">Replace time and date with a widget</string>
    <string name="replace_widget_with_clock_summary">Replace the clock on the home screen with a widget.</string>
    <string name="home_widget_change">Choose the desired widget from the menu next to the search bar.</string>
    <string name="clear_all">Clear all</string>
    <string name="set_home_widget">Set Homescreen Widget</string>
    <string name="no_row_specified">No apps specified to launch.</string>
    <string name="failed_to_open_database">Failed to open database!</string>
    <string name="unable_to_start_app">Unable to start an app. It may be uninstalled/upgrading.</string>
    <string name="clear_snacklets">Clear Snacklets</string>
    <string name="enable_usage_viewing">Show suggestions</string>
    <string name="enable_usage_viewing_message">Let us show your commonly used apps in the bottom bar by enabling Usage Access for Curveball. The launcher will work without this, but it won\'t deliver many (if any) suggestions.</string>
    <string name="enable">Enable</string>
    <string name="nope">Nope</string>
    <string name="aww">Aww.</string>
    <string name="cant_start">Couldn\'t start this app!</string>
    <string name="batch_open">Batch Open</string>
    <string name="default_charging_app">Charging shortcut</string>
    <string name="default_charging_app_summary">App to show in suggestions bar when charging.</string>
    <string name="default_low_power_app">Low power app</string>
    <string name="default_low_power_app_summary">App to show in suggestions bar when running low on power.</string>
    <string name="default_phone_app">Phone shortcut</string>
    <string name="default_phone_app_summary">App to show in suggestions bar when on a phone call.</string>
    <string name="welcome_title">Welcome</string>
    <string name="welcome_message"><![CDATA[Thanks for downloading our beta! We\'re still in the early stages, but we think you\'ll love what we\'ve built. It\'s completely different from any launcher you\'ve probably used before, so you should probably watch the tutorial (see below; it\'s short, don\'t worry). Feel free to email us with bugs, feature requests, feedback, and support questions at support@justpage.me. Thanks!]]></string>
    <string name="lets_go">Lets go!</string>
    <string name="tutorial_please">Tutorial please.</string>
    <string name="bah_humbug">Bah humbug.</string>
    <string name="cheer_up">Cheer up! We have swipe-y gestures and pretty colors.</string>
    <string name="done">Done</string>
    <string name="no_batch_rows">No rows to batch open. Add one by long pressing on an icon in the app drawer.</string>
    <string name="i_am_a_phone">This device is a phone</string>
    <string name="phone_pref_summary">Check this bock if your device is accidentally recognized as tablet, but it\'s really a phone (rare; mostly affects devices with build.prop modifications).</string>
    <string name="recent_apps_desc">Apps you\'ve used recently.</string>
    <string name="calendar_desc">A suggested app because you\'re in a calendar event.</string>
    <string name="call_desc">A suggested app because you\'re in a call.</string>
    <string name="battery_desc">A suggested app because of your battery\'s status.</string>
    <string name="next_alarm_at">Next alarm at %s</string>
    <string name="aggresive_icon_caching">Aggressive icon caching</string>
    <string name="aggresive_icon_caching_summary">Fetch launcher icons when we start. Provides a better experience, but may harm startup performance on low-end devices.</string>
    <string name="element_size">Max amount needed to move between each element of swipe view.</string>
    <string name="element_size_descriptions">Affects the main gesture view.</string>
    <string name="gesture_swipe">Gesture Swiping</string>
    <string name="element_size_title">Distance between elements</string>
    <string name="icon_size_small">Small icon size</string>
    <string name="icon_size_pref">Big icon size</string>
    <string name="preferences_name">Preferences</string>
    <string name="attributions">Attributions</string>
    <string name="tap_to_view_software_used">Tap to view software used in creating this product.</string>
    <string name="close">Close</string>
    <string name="attributions_message">
        We are grateful to be able to use the following libraries in this product:\n\n
        Android Support Library, Palette, and RecyclerView, © 2015 Android Open Source Project under the Apache license.\n
        Gson, Roboto Font © 2015 Google Inc. under the Apache license.\n
        DragSortListView © 2012 Carl Bauer under the Apache license.\n
        Apache Collections Commons © 2016 under the Apache license.\n
        MaterialDialogs © Aidan Michael Follestad under the MIT license.\n
        ButterKnife © 2013 Jake Wharton under the Apache License.\n
        Otto © 2013 Square, Inc under the Apache License.\n
        Climaicons by Adam Whitcroft.\n
        Weather data from MET Norway under the CC BY 3.0\n\n
        Apache License:\n
        Licensed under the Apache License, Version 2.0 (the "License");
        you may not use this file except in compliance with the License.
        You may obtain a copy of the License at

        http://www.apache.org/licenses/LICENSE-2.0

        Unless required by applicable law or agreed to in writing, software
        distributed under the License is distributed on an "AS IS" BASIS,
        WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
        See the License for the specific language governing permissions and
        limitations under the License.\n\n

        MIT License:\n
        Permission is hereby granted, free of charge, to any person obtaining a copy
        of this software and associated documentation files (the "Software"), to deal
        in the Software without restriction, including without limitation the rights
        to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
        copies of the Software, and to permit persons to whom the Software is
        furnished to do so, subject to the following conditions:

        The above copyright notice and this permission notice shall be included in all
        copies or substantial portions of the Software.

        THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
        IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
        FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
        AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
        LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
        OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
        SOFTWARE.
    </string>
    <string name="permissions_needed_for_smartbar">Permissions Needed</string>
    <string name="smartbar_needs_permissions">To suggest apps in the bottom bar when you\'re on phone calls, in calendar events, or running low on battery, we\'d lke permission to view your phone and calendar state. We\'d also like permission to get your location to show your local weather.</string>
    <string name="okay_we_wont_ask">Okay, we won\'t ask again.</string>
    <string name="got_it">Got it</string>
    <string name="suggestions">Suggestions</string>
    <string name="no_suggestions_right_now">No suggestions right now.</string>
    <string name="view_widget">View Widget</string>
    <string name="edit_folder">Edit Folder</string>
    <string name="open_all_in_folder">Open All</string>
    <string name="save">Save</string>
    <string name="edit_items">Edit Items</string>
    <string name="help">Help</string>
    <string name="edit_items_help">Drag a shorcut by the handle to reorder it, and swipe it away (like a notification) to remove it.</string>
    <string name="swap_widget">Swap Widget</string>
    <string name="error">Error!</string>
    <string name="store_not_installed">Store app not installed on this phone.</string>
    <string name="loading_suggestions">Loading suggestions…</string>
    <string name="debug_options">Debugging Options</string>
    <string name="debug_options_summary">If you\'re not developing Curveball, don\'t worry about this.</string>
    <string name="activity_not_found">Activity not found. Cannot launch.</string>
    <string name="drag_start">Drag start; should delete and start drag</string>
    <string name="allow_rotation">Allow rotation</string>
    <string name="favorite">Favorite</string>
    <string name="hide">Hide</string>
</resources>