<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/favorite"
        android:icon="@drawable/ic_favorite_border_white_24dp"
        android:title="@string/favorite"
        android:orderInCategory="1" />

    <item android:id="@+id/uninstall"
        android:icon="@drawable/ic_delete_white_24dp"
        android:title="@string/uninstall"
        android:orderInCategory="2" />

    <item android:id="@+id/app_info"
        android:icon="@drawable/ic_info_outline_white_24dp"
        android:title="@string/app_info"
        android:orderInCategory="3" />

    <item android:id="@+id/hide"
        android:icon="@drawable/ic_visibility_off_white_24dp"
        android:title="@string/hide"
        android:orderInCategory="4" />
</menu>